--- a/index (2).html
+++ b/index (2).html
@@ -10,7 +10,8 @@
         .box { background: white; padding: 20px; margin: auto; width: 60%; border-radius: 10px;
                box-shadow: 0 0 10px rgba(0,0,0,0.1); }
     </style>
-</head>
+</<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8963533070841189"
+     crossorigin="anonymous"></script>>
 <body>
     <div class="box">
         <h1>مرحباً بك في موقعي الأول 🎉</h1>
